Fixed textarea scrollbar styling Fixed delete cross click events Added about button and modal to sidebar Added auto scroll up to modals

--- a/styles-darkmode.css
+++ b/styles-darkmode.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 
 :root {
+  --clr-grey-25: #f8f9fc;
   --clr-grey-50: #f3f4f6;
   --clr-grey-100: #eef1f4;
   --clr-grey-300: #c5c5c5;
@@ -75,6 +76,24 @@ textarea {
   background-color: var(--clr-grey-900);
   color: white;
 }
+
+
+/* Textarea scrollbar */
+textarea::-webkit-scrollbar {
+  width: 0.5rem;
+}
+textarea::-webkit-scrollbar-track {
+  background: var(--clr-grey-700); 
+  border-radius: 1rem;
+}
+textarea::-webkit-scrollbar-thumb {
+  background: var(--clr-grey-500); 
+  border-radius: 1rem;
+}
+textarea::-webkit-scrollbar-thumb:hover {
+  background: var(--clr-grey-300); 
+}
+
 
 textarea:focus {
   outline: 2px solid var(--clr-grey-500);
@@ -154,7 +173,20 @@ body::-webkit-scrollbar-thumb:hover {
   vertical-align: middle;
   filter: none;
 }
+.song-navbar:hover,
+.new-note-navbar:hover,
+.pref-navbar:hover,
+.info-navbar:hover {
+  background-color: var(--clr-grey-700);
+  border-radius: 1rem;
+  outline: 4px solid var(--clr-grey-700);
+}
 
+.info-navbar {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
 
 .tag-search {
   display: flex;
@@ -588,6 +620,7 @@ input[type="file"] {
 .bass-button-container button,
 .bass-button-container a {
   background-color: var(--clr-grey-100);
+  color: black;
   font-weight: bold;
   border-radius: 1rem;
   padding: 0.5rem 1rem;
@@ -637,6 +670,42 @@ input[type="file"] {
   border: 2px solid var(--clr-grey-700);
   border-radius: 1rem;
   padding: 1rem;
+}
+
+/* Info Modal */
+.info-modal {
+  position: absolute;
+  text-align: center;
+  justify-content: space-between;
+  top: 20%;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
+  height: fit-content;
+  width: 40%;
+  background-color: white;
+  background-color: var(--clr-grey-900);
+  border: 2px solid var(--clr-grey-700);
+  border-radius: 1rem;
+  padding: 1rem;
+}
+
+.info-modal button {
+  background-color: var(--clr-grey-700);
+  margin: 0 auto;
+  text-align: center;
+  border-radius: 1rem;
+  padding: 0.5rem 1rem;
+  font-weight: bold;
+  cursor: pointer;
+  width: 5rem;
+  transition: background-color 200ms;
+}
+.info-modal button:hover {
+  background-color: var(--clr-grey-500);
 }
 
 /* Delete Tag Modal */
